<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="com.lazarski.cis4280finalproject.NoteEditActivity"
    android:id="@+id/editNoteView">

    <TextView
        android:id="@+id/noteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note_label"
        android:labelFor="@+id/noteText"
        style="@style/NoteLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/noteText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/note_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        style="@style/NoteEditText"
        app:layout_constraintTop_toTopOf="@id/noteLabel"
        app:layout_constraintBottom_toTopOf="@+id/contentText"
        app:layout_constraintLeft_toRightOf="@id/noteLabel"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/contentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_label"
        android:labelFor="@+id/contentText"
        style="@style/NoteLabel"
        app:layout_constraintTop_toTopOf="@+id/contentText"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/contentText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/content_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        style="@style/NoteEditText"
        app:layout_constraintTop_toBottomOf="@+id/noteText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/contentLabel"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveButtonClick"
        app:srcCompat="@drawable/check"
        android:contentDescription="@string/save_note"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>