<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noNotesLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:context="com.lazarski.cis4280finalproject.NoteActivity">

        <TextView
            android:id="@+id/noNoteLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_notes"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/addNoteButton" />

        <Button
            android:id="@+id/addNoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_note"
            android:onClick="addNoteButtonClick"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/showNotesLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        tools:context="com.lazarski.cis4280finalproject.NoteActivity">

        <TextView
            android:id="@+id/noteLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_label"
            style="@style/NoteLabel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/noteText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="30sp"
            tools:text="note"
            app:layout_constraintTop_toTopOf="@id/noteLabel"
            app:layout_constraintBottom_toTopOf="@+id/contentButton"
            app:layout_constraintLeft_toRightOf="@id/noteLabel"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/contentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/show_content"
            android:onClick="contentButtonClick"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/contentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_label"
            style="@style/NoteLabel"
            app:layout_constraintTop_toBottomOf="@+id/contentButton"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/contentText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="30sp"
            tools:text="content"
            app:layout_constraintTop_toTopOf="@id/contentLabel"
            app:layout_constraintLeft_toRightOf="@id/contentLabel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>

